<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorprimary"
    android:orientation="vertical"
    tools:context=".signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notification"
        android:textColor="@color/textcolor"
        android:textSize="35dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:id="@+id/NAME"

        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"
            android:layout_below="@id/NAME"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EMAIL"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:id="@+id/NAME"
            android:layout_marginTop="60dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:layout_below="@id/NAME"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Telephone"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:id="@+id/NAME"
            android:layout_marginTop="120dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:layout_below="@id/NAME"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:id="@+id/NAME"
            android:layout_marginTop="180dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:layout_below="@id/NAME"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Re_type_password"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:id="@+id/NAME"
            android:layout_marginTop="240dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:layout_below="@id/NAME"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:layout_below="@id/txt1"
            android:layout_marginTop="290dp"
            android:onClick="newuser"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cencel"
            android:layout_below="@id/txt1"
            android:layout_marginTop="340dp"
            android:onClick="newuser"

            />

    </RelativeLayout>

</LinearLayout>