<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorprimary"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notification"
        android:textColor="@color/textcolor"
        android:textSize="35dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="25dp"


        >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/NAME"
           android:textColor="@color/textcolor"
           android:textSize="20dp"
           android:id="@+id/lbl1"
           android:textStyle="bold"
           />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txt1"
              android:layout_below="@id/lbl1"
              />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_below="@id/txt1"
            android:layout_marginTop="40dp"
            android:onClick="newuser"

            />

        </RelativeLayout>


</LinearLayout>